maybe assignment fix. if it does problem we will revert it